--- a/.github/workflows/build-kernel-a12-5-10.yml
+++ b/.github/workflows/build-kernel-a12-5-10.yml
@@ -26,7 +26,7 @@ on:
           - Stable(标准)
           - Dev(开发)
           - Other(其他/指定)
-        default: Dev(开发)
+        default: Stable(标准)
       # kernelsu_branch_other:
       #   description: "如果选择了 “其他”，请指定您的自定义分支"
       #   required: false
@@ -50,11 +50,11 @@ on:
         required: true
         type: boolean
         default: true
-      get_manager:
-        description: '是否同时获取最新KSU管理器?（实验性功能，报错请关闭）'
-        required: true
-        type: boolean
-        default: true
+      #get_manager:
+      #  description: '是否同时获取最新KSU管理器?（实验性功能，报错请关闭）'
+      #  required: true
+      #  type: boolean
+      #  default: true
 jobs:
   build-kernel-a12-5-10:
     uses: ./.github/workflows/kernel-a12-5.10.yml
@@ -68,12 +68,12 @@ jobs:
       use_zram: ${{ inputs.use_zram }}
       use_kpm: ${{ inputs.use_kpm }}
       BBG: ${{ inputs.BBG || true }}
-  get-ksu-manager:
-    if: ${{ inputs.get_manager }}
-    uses: ./.github/workflows/get-manager.yml
-    secrets: inherit
-    with:
-      kernelsu_variant: ${{ inputs.kernelsu_variant }}
+  #get-ksu-manager:
+  #  if: ${{ inputs.get_manager }}
+  #  uses: ./.github/workflows/get-manager.yml
+  #  secrets: inherit
+  #  with:
+  #    kernelsu_variant: ${{ inputs.kernelsu_variant }}
 
   # build-kernel-a13-5-10:
   #   uses: ./.github/workflows/kernel-a13-5.10.yml
